# json-tag

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: azure-static-web-apps-thankful-water-0de54e203.yml  azure-static-web-apps-zealous-river-0ef666f03.yml  ci.yml  publish.yml
csharp/: JsonTag.CSharp.slnx  README.md
csharp/src/JsonTag/: JsonTag.csproj  JsonTagAttribute.cs  JsonTagNameAttribute.cs  JsonTagOptions.cs  JsonTagResolver.cs
csharp/test/JsonTag.Test/: DeserializeTests.cs  JsonTag.Test.csproj  JsonTagOptionsTests.cs  SerializeTests.cs  TestTypes.cs
csharp/test/TransitiveTest/App.Test/: App.Test.csproj  TransitiveTests.cs
csharp/test/TransitiveTest/BaseTypes/: BaseTypes.csproj  Pet.cs
csharp/test/TransitiveTest/DerivedTypes/: Cat.cs  Dog.cs
csharp/test/TransitiveTest/MoreDerivedTypes/: MoreDerivedTypes.csproj  Parrot.cs
examples/: README.md  docker-compose.yml
examples/csharp/: Circle.cs  Dockerfile  JsonTag.Example.csproj  Program.cs  Rectangle.cs  Shape.cs  ShapeService.cs  Triangle.cs
examples/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/frontend/src/: main.ts  render.ts  shapes.ts  style.css
examples/fsharp/: Dockerfile  JsonTag.FSharp.Example.fsproj  Program.fs  ShapeService.fs  Shapes.fs
examples/gleam/: Dockerfile  gleam.toml  manifest.toml
examples/gleam/src/: app.gleam  shape_service.gleam  shapes.gleam
examples/haskell/: Dockerfile  cabal.project  json-tag-example.cabal
examples/haskell/app/: Main.hs
examples/haskell/src/: Shapes.hs
examples/java/: Dockerfile  pom.xml
examples/java/src/main/java/jsontag/example/: Circle.java  Main.java  Rectangle.java  Shape.java  ShapeResponse.java  ShapeService.java  Triangle.java
examples/kotlin/: Dockerfile  build.gradle.kts  settings.gradle.kts
examples/kotlin/src/main/kotlin/jsontag/example/: Application.kt  ShapeService.kt  Shapes.kt
examples/ocaml/: Dockerfile  dune-project
examples/ocaml/lib/: dune  shapes.ml
examples/ocaml/server/: dune  main.ml
examples/python/: Dockerfile  pyproject.toml
examples/python/src/: main.py  shape_service.py  shapes.py
examples/rust/: Cargo.toml  Dockerfile
examples/rust/src/: main.rs  shapes.rs
examples/scala/: Dockerfile  build.sbt
examples/scala/src/main/scala/jsontag/example/: Server.scala  ShapeService.scala  Shapes.scala
examples/swift/: Dockerfile  Package.swift
examples/swift/Sources/: App.swift  Shape.swift  ShapeService.swift
examples/typescript/: Dockerfile  package-lock.json  package.json
examples/typescript/src/: server.ts  shapes.ts
fsharp/: JsonTag.FSharp.slnx  README.md
fsharp/src/JsonTag.FSharp/: JsonTag.FSharp.fsproj  JsonTagOptions.fs
fsharp/test/JsonTag.FSharp.Test/: DeserializeTests.fs  JsonTag.FSharp.Test.fsproj  JsonTagOptionsTests.fs  SerializeTests.fs  TestTypes.fs
gleam/: README.md  gleam.toml  manifest.toml
gleam/src/: json_tag.gleam
gleam/test/: deserialize_test.gleam  json_tag_test.gleam  serialize_test.gleam  test_types.gleam
haskell/: README.md  json-tag.cabal
haskell/src/Data/: JsonTag.hs
haskell/test/: DeserializeSpec.hs  JsonTagOptionsSpec.hs  SerializeSpec.hs  Spec.hs  TestTypes.hs
java/: README.md  pom.xml
java/src/main/java/jsontag/: JsonTag.java
java/src/test/java/jsontag/: Circle.java  DeserializeTest.java  PersonalVehicle.java  Rectangle.java  SerializeTest.java  Shape.java  TransportationVehicle.java  Vehicle.java
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/jsontag/: JsonTag.kt
kotlin/src/test/kotlin/jsontag/: DeserializeTest.kt  SerializeTest.kt  TestTypes.kt
ocaml/: README.md  dune-project  json_tag.opam
ocaml/lib/: dune  json_tag.mli
ocaml/test/: deserialize_test.ml  dune  json_tag_test.ml  run_tests.ml  serialize_test.ml  test_types.ml
python/: README.md  pyproject.toml
python/src/json_tag/: __init__.py  json_tag.py
python/test/: test_deserialize.py  test_serialize.py  test_types.py
rust/: Cargo.toml  README.md
rust/json-tag/: Cargo.toml
rust/json-tag-derive/: Cargo.toml
rust/json-tag-derive/src/: lib.rs
rust/json-tag-tests/: Cargo.toml
rust/json-tag-tests/tests/: deserialize_tests.rs  serialize_tests.rs  test_types.rs
rust/json-tag/src/: lib.rs
scala/: README.md  build.sbt
scala/src/main/scala/jsontag/: JsonTag.scala
scala/src/test/scala/jsontag/: DeserializeSpec.scala  SerializeSpec.scala  TestTypes.scala
swift/: Package.swift  README.md
swift/Sources/JsonTag/: JsonTag.swift  JsonTagCodingKey.swift
swift/Tests/JsonTagTests/: DeserializeTests.swift  SerializeTests.swift  TestTypes.swift
typescript/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
typescript/src/: index.ts
typescript/test/: deserialize.test.ts  index.test.ts  serialize.test.ts  testTypes.ts
website/: index.html  robots.txt  sitemap.xml
