cabal-version:      3.0
name:               json-tag
version:            0.1.0.0
synopsis:           Haskell aeson Options for JSON# — the #type convention for cross-language type tagging in JSON.
license:            MIT
license-file:       LICENSE
author:             immersus-machina
maintainer:         innovate@immersus-machina.com
homepage:           https://github.com/immersus-machina/json-tag
bug-reports:        https://github.com/immersus-machina/json-tag/issues
category:           JSON, Web

library
  exposed-modules:  Data.JsonTag
  hs-source-dirs:   src
  build-depends:
    base >= 4.14 && < 5,
    aeson >= 2.0 && < 3,
    text >= 1.2 && < 3
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite json-tag-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    TestTypes
    SerializeSpec
    DeserializeSpec
    JsonTagOptionsSpec
  hs-source-dirs:   test
  build-depends:
    base >= 4.14 && < 5,
    json-tag,
    aeson >= 2.0 && < 3,
    bytestring >= 0.10 && < 1,
    text >= 1.2 && < 3,
    hspec >= 2.7 && < 3
  default-language: Haskell2010
  ghc-options:      -Wall
