[project]
name = "json-tag"
version = "0.1.0"
description = "Python pydantic wrapper for JSON# — the #type convention for cross-language type tagging in JSON."
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]
authors = [{ name = "immersus-machina" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["json", "type", "discriminator", "tagged-union", "pydantic", "interop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/immersus-machina/json-tag"
Repository = "https://github.com/immersus-machina/json-tag"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
