cabal-version:      3.0
name:               json-tag-example
version:            0.1.0.0
synopsis:           JSON Tag example backend using Scotty

library
  exposed-modules:  Shapes
  hs-source-dirs:   src
  build-depends:
    base >= 4.14 && < 5,
    aeson >= 2.0 && < 3,
    json-tag,
    random >= 1.2 && < 2
  default-language: Haskell2010
  ghc-options:      -Wall

executable json-tag-example
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base >= 4.14 && < 5,
    aeson >= 2.0 && < 3,
    scotty >= 0.12 && < 1,
    json-tag-example,
    random >= 1.2 && < 2
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
