[package]
name = "json-tag-example"
version = "0.1.0"
edition = "2021"

[dependencies]
json-tag = { path = "../../rust/json-tag" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
