[package]
name = "json-tag-derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro for json-tag — injects #[serde(tag = \"#type\")]"
license = "MIT"
repository = "https://github.com/immersus-machina/json-tag"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
